@@ -1,5 +1,8 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1276729: cal_mod_date/time not stored in GMT
+      1276782: icalclient defaults to __public__ permissions
+      1246913: cal_status incorrect when publish from iCal
       1276709: week_details.php broke in revision 1.31 and up
       1265900:  exportation to iCal. Newlines should not be escaped per RFC2445
       1265575: Bug in get_all_dates()
